== 1.2.13 (2012-12-07)

* (mvz) Update to rspec2.
* (petrjanda) Fix undefined method `chr' on an instance of String on Rubinius

== 1.2.12 (2012-06-09)

* (mvz) Use ripper_ruby_parser on Ruby 1.9.3 and up (thus making reek able
        to parse the new 1.9 hash syntax).

== 1.2.11 (2012-06-08)

* (mvz) Make Bundler a development dependency.

== 1.2.10 (2012-06-05)

* (troessner) Use bundler rake tasks.

== 1.2.9 (2012-06-05)

* (marktabler) Allow single underscore as a variable assignment without triggering UncommunicativeVariableName.

== 1.2.8 (2010-04-26)

=== Major Changes
* Smell detectors can be configured or disabled in code comments
** Comment with :reek:smell_name disables the named smell for a class, module or method
** Comment with :reek:smell_name:{...} for more detailed configuration
* Additional config file(s) can be specified:
** on the command-line using -c
** via Reek::Rake::Task in the rakefile

=== Minor Changes
* Duplication can be configured to ignore specific calls
* IrresponsibleModule now reports scoped module names correctly (#66)
* NestedIterators is now more configurable:
** Option to specify permitted nesting depth (#14)
** Option to ignore certain iterator methods

== 1.2.7.3 (2010-03-29)

=== Minor Changes
* UtilityFunction no longer reported when local method called in param initializer (#60)
* Spaces removed from smell class names in report output
* Masked smells are no longer reported
** the -a command-line option has been removed
** some methods on Examiner are now deprecated
* DataClump no longer needs infinite memory for large classes (#57 again)

== 1.2.7.2 (2010-03-05)

=== Minor Changes
* Number of masked smells is no longer shown in report headers
* Masked smells are no longer listed in --yaml reports
* DataClump no longer needs infinite memory for large classes (#57)
* DataClump reports the names of the offending methods in the YAML report
* UncommunicativeMethodName now accepts operator names (+, -, ...)