@@ -1,3 +1,7 @@
+== Not released yet
+
+* (dkubb) Fix problem with IrresponsibleModule flagging the same module twice
+
 == 1.2.13 (2012-12-07)
 
 * (mvz) Update to rspec2.
